# colorize

./: LICENSE  README.md  colorize.cabal  stack.yaml
rules/: gcc.rules  ghci.rules
src/: Main.hs
src/Colorize/: Color.hs  Parsing.hs  Rule.hs
src/Text/: Regex.hs
