name:                  colorize
version:               0.1.0.0
synopsis:              Colorize text with ANSI color codes according to
                       user-specified rules
description:           Colorize is a Haskell program that colorizes the terminal
                       output of other applications by using ANSI color codes.
                       The colorization rules for an application are read from
                       rule files and consist of a regular expression for
                       matching and a human-readable format/color specification.
license:               BSD3
license-file:          LICENSE
author:                Wolfram Reinke
maintainer:            WolframReinke@web.de
copyright:             (c) 2016 Wolfram Reinke
category:              Text
build-type:            Simple
cabal-version:         >=1.10

executable colorize
  main-is:             Main.hs

  build-depends:       base            >=4.8  && <4.9,
                       containers      >=0.5  && <0.6,
                       directory       >=1.2  && <1.3,
                       filepath        >=1.4  && <1.5,
                       indents         >=0.3  && <0.4,
                       megaparsec      >=4.4  && <4.5,
                       regex-base      >=0.90 && <0.100,
                       regex-tdfa      >=1.2  && <1.3,
                       regex-tdfa-text >=1.0  && <1.1,
                       semigroups      >=0.18 && <0.19,
                       text            >=1.2  && <1.3

  other-modules:       Text.Regex,
                       Colorize.Rule,
                       Colorize.Parsing,
                       Colorize.Color

  default-extensions:  OverloadedStrings,
                       FlexibleContexts

  hs-source-dirs:      src
  default-language:    Haskell2010
